footer work and stopping overlapping on main

--- a/web/themes/custom/customsolent/css/component/menu-desktop.css
+++ b/web/themes/custom/customsolent/css/component/menu-desktop.css
@@ -33,6 +33,8 @@
   main {
     clear: both;
     border-top: 1px steelblue solid;
+    overflow: hidden;
+    /* https://gemini.google.com/share/1bf7b89017b3 */
   }
 
   /* credit: BBC iPlayer - well I pay my license fee to the glorious corporation. "It's Your BBC" */
